# arka

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tbd.md
agent/controlplane/: Cargo.toml
agent/controlplane/src/: adapters.rs  api.rs  lib.rs  observability.rs  runner.rs  service.rs  types.rs  whatsapp.rs
agent/controlplane/tests/: controlplane_api.rs
agent/openai/: Cargo.toml
agent/openai/src/: lib.rs
agent/runtime/: Cargo.toml
agent/runtime/.arka/mcp/: fake_full.md  fake_minimal.md  kite_full.md  kite_minimal.md
agent/runtime/src/: events.rs  ids.rs  lib.rs  model.rs  policy.rs  prompt.rs  runtime.rs  state.rs  subagent.rs  todo.rs  tools.rs
agent/runtime/tests/: runtime_flow.rs
agent/runtime/tests/fixtures/config/: postgres_mcp_servers.json
agent/runtime/tests/fixtures/outputs/: turn-quoted-open-reconcile-report.html
agent/runtime/tests/fixtures/turn-1/: todos.txt
agent/runtime/tests/fixtures/turn-1-bash-html/: todos.txt
agent/runtime/tests/fixtures/turn-active-generic-starter/: todos.txt
agent/runtime/tests/fixtures/turn-active-html-broad-goal/: todos.txt
agent/runtime/tests/fixtures/turn-active-html-complete-deliverable/: todos.txt
agent/runtime/tests/fixtures/turn-active-html-report-analysis/: todos.txt
agent/runtime/tests/fixtures/turn-active-html-users-table-analysis/: todos.txt
agent/runtime/tests/fixtures/turn-active-open-mcp-block/: todos.txt
agent/runtime/tests/fixtures/turn-active-open-only/: todos.txt
agent/runtime/tests/fixtures/turn-active-partial-inspection/: todos.txt
agent/runtime/tests/fixtures/turn-active-reconcile/: todos.txt
agent/runtime/tests/fixtures/turn-auto-advance-summary/: todos.txt
agent/runtime/tests/fixtures/turn-generic-starter-bundled-goal/: todos.txt
agent/runtime/tests/fixtures/turn-kite-server-scope-feedback/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-routing/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-routing-team-compute/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-routing-workspace-inputs/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync-blocked-partial/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync-hybrid-partial/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync-partial/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync-retry/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync-season-confirm/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-sync-timestamp-trend/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-trace-reconcile/: todos.txt
agent/runtime/tests/fixtures/turn-mcp-trace-season-confirm/: todos.txt
agent/runtime/tests/fixtures/turn-missing-html-repair/: todos.txt
agent/runtime/tests/fixtures/turn-quoted-open-reconcile/: todos.txt
agent/runtime/tests/fixtures/turn-tool-executor-mcp-gate/: todos.txt
bridges/whatsapp-web/: server.mjs
config/: mcp_servers.example.json  prompt.base.md  prompt.execution.md  prompt.md  prompt.planning.md  subagents.json  tool_policy.example.json
config/subagents/: mcp-executor.execution.prompt.md  mcp-executor.planning.prompt.md  mcp-executor.prompt.md  tool-executor.execution.prompt.md  tool-executor.prompt.md  (+1 more)
mcp/cli/: Cargo.toml
mcp/cli/src/: main.rs
mcp/cli/tests/: inspect.rs
mcp/client/: Cargo.toml
mcp/client/src/: codec.rs  lib.rs
outputs/: turn-1-bash-html-report.html
scripts/: postgres_mcp_server_wrapper.py
turn-1/: todos.txt
turn-1-bash-html/: todos.txt
turn-active-generic-starter/: todos.txt
turn-active-open-only/: todos.txt
turn-active-partial-inspection/: todos.txt
turn-active-reconcile/: todos.txt
turn-auto-advance-compute/: todos.txt
turn-auto-advance-summary/: todos.txt
turn-generic-starter-bundled-goal/: todos.txt
turn-mcp-routing/: todos.txt
turn-mcp-routing-workspace-inputs/: todos.txt
turn-mcp-sync/: todos.txt
turn-mcp-sync-blocked-partial/: todos.txt
turn-mcp-sync-hybrid-partial/: todos.txt
turn-mcp-sync-partial/: todos.txt
turn-mcp-sync-retry/: todos.txt
turn-mcp-trace-reconcile/: todos.txt
turn-quoted-open-reconcile/: todos.txt
turn-tool-executor-mcp-gate/: todos.txt
(+6 files in other folders)
