# Workspace layout:
# - `mcp/*` holds registry loading, client transport, and inspection tooling.
# - `agent/*` holds the single-turn runtime, provider adapter, and control plane.
[workspace]
members = [
    "agent/controlplane",
    "agent/runtime",
    "agent/openai",
    "mcp/config",
    "mcp/client",
    "mcp/metadata",
    "mcp/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rustyline = "14.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
