# Single-turn MCP-first agent runtime.
[package]
name = "agent-runtime"
edition.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
mcp-client = { path = "../../mcp/client" }
mcp-config = { path = "../../mcp/config" }
mcp-metadata = { path = "../../mcp/metadata" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
